# ia-blender-director

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  ORIGINAL_REQUEST.md  README.md  pyproject.toml
.agents/: BRIEFING.md  handoff.md  test_plan.py  test_video_e2e.py
.agents/auditor_m5_1/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  metadata.txt  progress.md
.agents/auditor_m5_2/: BRIEFING.md  ORIGINAL_REQUEST.md  metadata.txt
.agents/challenger_m5_1/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  metadata.txt  progress.md
.agents/challenger_m5_2/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  metadata.txt  progress.md
.agents/explorer_m1_1/: BRIEFING.md  ORIGINAL_REQUEST.md  analysis.md  handoff.md  metadata.txt  progress.md
.agents/explorer_m1_2/: BRIEFING.md  ORIGINAL_REQUEST.md  analysis.md  handoff.md  metadata.txt  progress.md
.agents/explorer_m1_3/: BRIEFING.md  ORIGINAL_REQUEST.md  analysis.md  handoff.md  metadata.txt  progress.md
.agents/orchestrator/: .gitkeep  BRIEFING.md  ORIGINAL_REQUEST.md  PROJECT.md  progress.md
.agents/reviewer_m5_1/: BRIEFING.md  ORIGINAL_REQUEST.md  debug_ffmpeg.py  handoff.md  metadata.txt  progress.md
.agents/reviewer_m5_2/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  metadata.txt  progress.md
.agents/reviewer_m5_3/: BRIEFING.md  (+2 more)
.team/: run-2026-06-18T13-04-59-399Z.md  run-2026-06-18T13-15-09-156Z.md
docs/: architecture.md  commands.md  escalado.md  estado_proyecto.md  estrategia_contenido.md  personajes.md  project_vision.md  roadmap.md
renders/: episodio_001_subs.ass
scripts/: destroy_gpu.sh  find_gpu.sh  generate_character_contact_sheet.py  generate_screen_textures.py  provision_gpu.sh  render_noticiero.sh  setup_comfy_gpu.sh
tests/: test_asset_import.py  test_assets.py  test_batch.py  test_broadcast.py  test_character_registry.py  test_comfy_client.py  test_compositor_passes.py  test_critic.py  test_db.py  test_generator.py  test_index.py  test_jobs.py  test_lipsync.py  test_pipeline_lipsync.py  test_planner.py  test_postproduction.py  test_preflight.py  test_render_shot.py  test_sfx.py  test_shot_spec.py  test_subtitles.py  test_transitions.py  test_tts.py  test_video.py
web/: app.js  index.html  styles.css
(+122 files in other folders)
