[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-blender-director"
version = "0.1.0"
description = "Pipeline local para dirigir Blender desde especificaciones estructuradas."
requires-python = ">=3.12"
dependencies = []

[project.scripts]
ai-blender-director = "ai_blender_director.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
