[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-blender-director"
version = "0.1.0"
description = "Pipeline local para dirigir Blender desde especificaciones estructuradas."
requires-python = ">=3.12"
dependencies = [
    "Pillow>=10.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "google-genai>=0.2.0",
    "sqlalchemy>=2.0.0",
    "websockets>=11.0.0",
    "pydantic-settings>=2.0.0",
    "openai>=1.0.0",
    "ffmpeg-python>=0.2.0",
]

[project.scripts]
ai-blender-director = "ai_blender_director.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
