[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-blender-director"
version = "0.1.0"
description = "Pipeline local para dirigir Blender desde especificaciones estructuradas."
requires-python = ">=3.12"
dependencies = [
    "Pillow>=10.0.0",
    "numpy>=1.26.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "sqlalchemy>=2.0.0",
    "websockets>=11.0.0",
    "pydantic-settings>=2.0.0",
    "openai>=1.0.0",
    "ffmpeg-python>=0.2.0",
]

[project.optional-dependencies]
# Director Agent endurecido: structured outputs con reintentos sobre Pydantic.
director = ["instructor>=1.0.0"]
# Lip-sync: el binario `rhubarb` se instala aparte (no es paquete pip).
# Voz avanzada (clonación/emoción): se instala el motor elegido aparte:
#   xtts  -> pip install TTS         (Coqui, XTTS v2)
#   fish  -> ver fish-speech upstream
# y se selecciona con settings.tts_engine.

[project.scripts]
ai-blender-director = "ai_blender_director.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
